@@ -246,6 +246,47 @@ class SGL_Wizard extends SGL_Manager
             }
             return true;
         }
-    }    
+    }
+
+    /**
+     * Adds pages to a Wizard queue.
+     *
+     * @access  public
+     * @param   string  $pageName   the name of the calling script
+     * @param   array   $param      params to be appended to URL
+     * @return  void
+     */
+    function addPage($pageName, $param=null)
+    {
+        SGL::logMessage(null, PEAR_LOG_DEBUG);
+        $aPages = SGL_Session::get('wiz_sequence');
+        if (isset($pageName)) {
+
+            //  pagename, isCurrent, param
+            $aPages[] = array(  'pageName'  => $pageName,
+                                'current'   => false,
+                                'param'     => $param);
+        }
+        SGL_Session::set('wiz_sequence', $aPages);
+        return true;
+    }
+
+    /**
+     * Loads sequence of pages from Wizard queue and starts execution.
+     *
+     * @access  public
+     * @return  void
+     */
+    function startWizard()
+    {
+        SGL::logMessage(null, PEAR_LOG_DEBUG);
+        $aPages = SGL_Session::get('wiz_sequence');
+
+        //  set first page to enabled
+        $aPages[0]['current'] = true;
+        SGL_Session::set('wiz_sequence', $aPages);
+        SGL_HTTP::redirect($aPages[0]['pageName'],$aPages[0]['param']);
+        return true;
+    }
 }
 ?>
